feat: add adaptivity

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <button type="submit" class="search-button"></button>
         </form>
     </header>
-    <div class="galleryContainer">
+    <div class="galleryContainer"></div>
     </div>
     <footer>
         <div class="footer-container">
